Render permission indicator correctly
Surrounding elements squeezed it too small in some cases

--- a/app/assets/stylesheets/new_dashboard/permission-indicator.css.scss
+++ b/app/assets/stylesheets/new_dashboard/permission-indicator.css.scss
@@ -14,6 +14,7 @@ $c: #E2DFDF;
   font-size: $sFontSize-smaller;
   line-height: $sLineHeight-smaller;
   font-weight: $sFontWeight-normal;
+  min-width: 25px;
 }
 .PermissionIndicator:before {
   content: 'READ'
